--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   http: ^0.12.2
   cached_network_image: ^2.5.0
   flutter_typeahead: ^2.0.0
+  charts_flutter: ^0.10.0
   
   flutter:
     sdk: flutter
